# tdx-lib

./: ..gitmodules.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ninja  includes.hpp  main.cpp  main.hpp  main_includes.hpp  tdx-lib.code-workspace  tests.cpp
.cmake/api/v1/reply/: cache-v2-4d9284f70e67b5ddb82f.json  cache-v2-61ed14044a77b89e0619.json  cache-v2-76e6d7fb45e4c1bcbf6d.json  cache-v2-d4b0cbd624d2e7d1fc66.json  cmakeFiles-v1-242a118c7929232a35f8.json  cmakeFiles-v1-5278a7844ed68fd595a4.json  cmakeFiles-v1-5397458d1127166e5c8a.json  (+16 more)
design_docs/: tdx_format.md
lib/: tdx_serde.cpp  tdx_serde.hpp
lib/imports/: tdx_extern_serde.cpp  tdx_extern_serde.hpp
lib/internal/: endian_tester.hpp  parsers.cpp  parsers.hpp  result.hpp  serializers.cpp  serializers.hpp  tdx_serde.cpp  tdx_serde.hpp  types_table_helper.cpp  types_table_helper.hpp
models/: document_set.cpp  document_set.hpp  includes.hpp  intermediate_document.hpp  result_codes_table.hpp  shared_types.hpp  string_encoding.hpp  tdx_document.cpp  tdx_document.hpp  tdx_link.hpp  tdx_property.cpp  tdx_property.hpp  tdx_property_deleter.cpp  tdx_property_deleter.hpp  tdx_schema.cpp  tdx_schema.hpp  tdx_vector.hpp
models/typedefs/: tdx_property.hpp  tdx_property_for_document.hpp  tdx_value.hpp  tdx_value_for_property.hpp
models/values/: extern_includes.hpp  includes.hpp  tdx_blob.cpp  tdx_blob.hpp  tdx_blob_ref.cpp  tdx_blob_ref.hpp  tdx_boolean.cpp  tdx_boolean.hpp  tdx_daterange.cpp  tdx_daterange.hpp  tdx_datetime.cpp  tdx_datetime.hpp  tdx_document.cpp  tdx_document.hpp  tdx_float32.cpp  tdx_float32.hpp  tdx_float64.cpp  tdx_float64.hpp  tdx_free_document.cpp  tdx_free_document.hpp  tdx_int16.cpp  tdx_int16.hpp  tdx_int32.cpp  tdx_int32.hpp  tdx_int64.cpp  tdx_int64.hpp  tdx_int_16.cpp  tdx_json.cpp  tdx_json.hpp  tdx_null.cpp  tdx_null.hpp  tdx_string.cpp  tdx_string.hpp  tdx_sub_document.cpp  tdx_sub_document.hpp  tdx_timespan.cpp  tdx_timespan.hpp  tdx_type.hpp  tdx_uint16.cpp  tdx_uint16.hpp  (+10 more)
tdx_tests/: shared.hpp  test_blob.hpp  test_boolean.hpp  test_daterange.hpp  test_datetime.hpp  test_float32.hpp  test_float64.hpp  test_int16.hpp  test_int32.hpp  test_int64.hpp  test_json.hpp  test_string.hpp  test_timespan.hpp  test_uint16.hpp  test_uint32.hpp  test_uint64.hpp  tests.cpp
